tekton/pipeline-java/gitlab-eventlistener-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: el-gitlab-ci-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: el-gitlab.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: el-gitlab-ci-listener
              servicePort: 8080
